# context_builder

./: CLAUDE.md  Cargo.toml  Makefile  README.md  SKILL.md
.claude/: settings.local.json
docs/: context-pipeline.md  impact.md
scripts/: bench.ps1
src/: lib.rs  main.rs  model.rs  output.rs
src/cli/: callees.rs  callers.rs  context.rs  find.rs  find_iface.rs  find_impls.rs  flow.rs  impact.rs  index.rs  init.rs  mod.rs  pkg_tree.rs  refs.rs  resolve.rs  status.rs  trace.rs
src/context/: expand.rs  mod.rs  pack.rs  rank.rs  seed.rs
src/flow/: controlflow.rs  interface.rs  mod.rs  render.rs  tree.rs
src/gopls/: mod.rs  protocol.rs  queries.rs  rpc.rs
src/impact/: mod.rs
src/index/: extractor.rs  mod.rs  parser.rs  walker.rs
src/semantic/: call_graph.rs  impls.rs  mod.rs
src/store/: edges.rs  files.rs  mod.rs  schema.rs  symbols.rs
tests/: e2e.rs  integration.rs
tests/fixtures/: simple.go
tests/fixtures/semantic/: go.mod  handler.go  service.go
