[package]
name = "gocx"
version = "0.1.0"
edition = "2021"
description = "AI-first Go codebase intelligence CLI"

[[bin]]
name = "gocx"
path = "src/main.rs"

[lib]
name = "gocx"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ignore = "0.4"
blake3 = "1"
rayon = "1"
indicatif = "0.17"
tree-sitter = "0.22"
tree-sitter-go = "0.21"
atty = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "process", "io-util", "time", "sync"] }
petgraph = { version = "0.6", features = ["serde-1"] }
which = "6"

[dev-dependencies]
insta = { version = "1", features = ["json"] }
tempfile = "3"
